--- a/example/example_1.html
+++ b/example/example_1.html
@@ -5,7 +5,7 @@
 <title>readQuery Example 1</title>
 </head>
 <body>
-<script src="../src/readQuery-1.0.js"></script>
+<script src="../src/readQuery.js"></script>
 <script>
 for(let i in query()){
 	alert(i+"\n"+query()[i])
