--- a/example/example_2.html
+++ b/example/example_2.html
@@ -5,7 +5,7 @@
 <title>readQuery Example 2</title>
 </head>
 <body>
-<script src="readQuery.js"></script>
+<script src="../src/readQuery.js"></script>
 <script>
 // Get query string //
 alert(getQueryString());
