--- a/example/example_1.html
+++ b/example/example_1.html
@@ -7,6 +7,7 @@
 <body>
 <script src="../src/readQuery.js"></script>
 <script>
+// Get query object //
 for(let i in query()){
 	alert(i+"\n"+query()[i])
 }
