--- a/example/example_2.html
+++ b/example/example_2.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8"/>
-<title>readQuery Example 2</title>
+    <meta charset="utf-8" />
+    <title>readQuery Example 2</title>
 </head>
+
 <body>
-<script src="../src/readQuery.js"></script>
-<script>
-// Get query string //
-alert(getQueryString());
-</script>
+    <script src="../src/readQuery.js"></script>
+    <script>
+        // Get query string //
+        alert(window.location.queryString);
+    </script>
 </body>
+
 </html>
