Fix example_1, add .gitignore

--- a/examples/example_1.html
+++ b/examples/example_1.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<script src="../src/readQuery.js"></script>
+	<script src="../src/readQuery.js" onload="load()"></script>
 	<script>
 		// Get query object //
 		for (let i in window.location.query) {
-			alert(i + "\n" + query()[i])
+			console.log(i + "\n" + window.location.query[i])
 		}
 	</script>
 </body>
