--- a/examples/example_2.html
+++ b/examples/example_2.html
@@ -10,7 +10,7 @@
     <script src="../src/readQuery.js"></script>
     <script>
         // Get query string //
-        alert(window.location.queryString);
+        console.log(window.location.queryString);
     </script>
 </body>
 
