--- a/examples/getQueryObject.html
+++ b/examples/getQueryObject.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<script src="../src/readQuery.js" onload="load()"></script>
+	<script src="../src/readQuery.js"></script>
 	<script>
 		// Get query object //
 		for (let i in window.location.query) {
